Separation of build parents for tycho and non-tycho builds