@@ -24,7 +24,7 @@
         <hibernate.version>4.1.7.Final</hibernate.version>
         <testng.version>5.12.1</testng.version>
         <!-- XText / Tycho -->
-        <tycho-version>0.15.0</tycho-version>
+        <tycho-version>0.16.0</tycho-version>
         <fornax-version>3.4.0</fornax-version>
         <xtend-version>2.3.1</xtend-version>
     </properties>
@@ -99,79 +99,6 @@
                     </configuration>
                 </plugin>
                 <plugin>
-                    <groupId>org.eclipse.xtend</groupId>
-                    <artifactId>xtend-maven-plugin</artifactId>
-                    <version>${xtend-version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.eclipse.tycho</groupId>
-                    <artifactId>tycho-maven-plugin</artifactId>
-                    <version>${tycho-version}</version>
-                    <extensions>true</extensions>
-                </plugin>
-                <plugin>
-                    <groupId>org.eclipse.tycho</groupId>
-                    <artifactId>tycho-p2-repository-plugin</artifactId>
-                    <version>${tycho-version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.eclipse.tycho</groupId>
-                    <artifactId>tycho-packaging-plugin</artifactId>
-                    <version>${tycho-version}</version>
-                    <configuration>
-                        <strictBinIncludes>false</strictBinIncludes>
-                        <strictVersions>false</strictVersions>  <!-- essential for releases - should run SNAPSHOTs without this setting to verify MANFEST OK -->
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.fornax.toolsupport</groupId>
-                    <artifactId>fornax-oaw-m2-plugin</artifactId>
-                    <version>${fornax-version}</version>
-                    <executions>
-                        <execution>
-                            <id>xtext-bon</id>
-                            <phase>generate-sources</phase>
-                            <goals>
-                                <goal>run-workflow</goal>
-                            </goals>
-                            <configuration>
-                                <timestampFileName>xtext-generator.timestamp</timestampFileName>
-                                <workflowDescriptor>jar:file:${user.home}/.m2/repository/de/jpaw/bonaparte-dsl/de.jpaw.bonaparte.dsl/${bonaparte-dsl.version}/de.jpaw.bonaparte.dsl-${bonaparte-dsl.version}.jar!/de/jpaw/bonaparte/dsl/generator/BonScriptGeneratorMWE.mwe2</workflowDescriptor>
-                                <properties>
-                                    <modelPath>../../src/main/bon</modelPath>
-                                    <targetDir>../../src/generated</targetDir>
-                                </properties>
-                            </configuration>
-                        </execution>
-                        <execution>
-                            <id>xtext-bddl</id>
-                            <phase>generate-sources</phase>
-                            <goals>
-                                <goal>run-workflow</goal>
-                            </goals>
-                            <configuration>
-                                <workflowDescriptor>jar:file:${user.home}/.m2/repository/de/jpaw/bonaparte-dsl/de.jpaw.persistence.dsl/${bonaparte-dsl.version}/de.jpaw.persistence.dsl-${bonaparte-dsl.version}.jar!/de/jpaw/persistence/dsl/generator/BDDLGeneratorMWE.mwe2</workflowDescriptor>
-                                <timestampFileName>xtext-generator-bddl.timestamp</timestampFileName>
-                                <properties>
-                                    <modelPath>../../src/main/bon</modelPath>
-                                    <targetDir>../../src/generated</targetDir>
-                                </properties>
-                            </configuration>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <workflowEngine>mwe2</workflowEngine>
-                        <jvmSettings>
-                            <fork>true</fork>
-                            <jvmArgs>
-                                <jvmArg>-Xms100m</jvmArg>
-                                <jvmArg>-Xmx700m</jvmArg>
-                                <jvmArg>-XX:MaxPermSize=256m</jvmArg>
-                            </jvmArgs>
-                        </jvmSettings>
-                    </configuration>
-                </plugin>
-                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>2.5.1</version>
@@ -221,54 +148,6 @@
             </plugin>
         </plugins>
     </build>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>xtend.plugin.repository</id>
-            <name>Xtend2 Plugin Repository</name>
-            <url>http://build.eclipse.org/common/xtend/maven/</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>fornax.plugin.repository</id>
-            <name>Fornax Plugin Repository</name>
-            <url>http://www.fornax-platform.org/m2/repository</url>
-        </pluginRepository>
-    </pluginRepositories>
-
-    <repositories>
-        <repository>
-            <id>EclipseLink Repo</id>
-            <url>http://download.eclipse.org/rt/eclipselink/maven.repo</url>
-        </repository>
-        <repository>
-            <id>maven.eclipse.org</id>
-            <url>http://maven.eclipse.org/nexus/content/groups/public/</url>
-        </repository>
-        <repository>
-            <id>xtend.repository</id>
-            <name>Xtend2 Repository</name>
-            <url>http://build.eclipse.org/common/xtend/maven/</url>
-        </repository>
-        <repository>
-            <id>xtext</id>
-            <url>http://build.eclipse.org/common/xtext/maven/maven-snapshot/final/</url>
-        </repository>
-        <repository>
-            <id>p2-juno</id>
-            <layout>p2</layout>
-            <url>http://download.eclipse.org/releases/juno</url>
-        </repository>
-        <repository>
-            <id>p2-xtext</id>
-            <layout>p2</layout>
-            <url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases</url>
-        </repository>
-        <repository>
-            <id>fornax.repository</id>
-            <name>Fornax Repository</name>
-            <url>http://www.fornax-platform.org/m2/repository</url>
-        </repository>
-    </repositories>
 
     <profiles>
         <profile>
@@ -329,11 +208,12 @@
     </reporting>
 
     <modules>
-        <module>../persistence-core/pom.xml</module>
-        <module>../persistence-hibernate/pom.xml</module>
-        <module>../persistence-eclipselink/pom.xml</module>
-        <module>../persistence-core-test/modules/generator/pom.xml</module>
-        <module>../persistence-core-test/pom.xml</module>
+        <module>../persistence-srcgen</module>
+        <module>../persistence-core/</module>
+        <module>../persistence-hibernate</module>
+        <module>../persistence-eclipselink</module>
+        <module>../persistence-core-test/modules/generator</module>
+        <module>../persistence-core-test</module>
     </modules>
-    
+
 </project>
